--- a/portfolio/src/projects.json
+++ b/portfolio/src/projects.json
@@ -1,6 +1,15 @@
 [
     {
         "id": 1,
+        "image": "/MatchFit.png",
+        "Title": "MatchFit",
+        "description": "This is a fullstack website. It is a job-board web app that allows users to search for jobs by title and location. It also has a feature that allows users to apply for jobs. It also has a login and signup feature that allows Employers to login and sign up repsectively. It is also mobile responsive.",
+        "skill": ["React", "Typescript", "Strapi", "Postgres", "Heroku"],
+        "live": "https://match-fit.vercel.app/",
+        "github": "https://github.com/Victor-Mutwiri/MatchFit"
+    },
+    {
+        "id": 2,
         "image": "/eCitizen.png",
         "Title": "eCitizen Clone",
         "description": "This is a front-end clone of the eCitizen website. It is a government website that provides a wide range of government services to Kenyan citizens, businesses, and visitors.",
@@ -9,7 +18,7 @@
         "github": "https://github.com/Victor-Mutwiri/eCitizen"
     },
     {
-        "id": 2,
+        "id": 3,
         "image": "/movie-review app.png",
         "Title": "Movie Review App",
         "description": "This is a front-end app that makes use of the  IMDB open API, to fetch and display movie details. It has a search feature that allows users to search for movies by title.",
@@ -18,7 +27,7 @@
         "github": "https://github.com/Victor-Mutwiri/Movie-review-App"
     },
     {
-        "id": 3,
+        "id": 4,
         "image": "/uberEats.png",
         "Title": "UberEats Clone",
         "description": "This is a front-end clone of the UberEats website. It has a search feature that allows users to search for restaurants by name. It also has a login and signup feature that allows users to login and sign up repsectively. It is also mobile responsive unlike the original website.",
@@ -27,7 +36,7 @@
         "github": "https://github.com/Victor-Mutwiri/UberEats"
     },
     {
-        "id": 4,
+        "id": 5,
         "image": "/Safari Adventures.png",
         "Title": "Safiri Adventures",
         "description": "This is a front-end website of a tours and travel agency. Data is fetched from a JSON file and displayed on the website. It is also mobile responsive.",
@@ -36,7 +45,7 @@
         "github": "https://github.com/Victor-Mutwiri/Travel-JSON-"
     },
     {
-        "id": 5,
+        "id": 6,
         "image": "/Finance Logger App.png",
         "Title": "Finance Logger App",
         "description": "This is a front-end web app for finance logging that helps track payments. It has a feature that allows users to add and delete transactions. It is also mobile responsive.",
