--- a/portfolio/src/projects.json
+++ b/portfolio/src/projects.json
@@ -1,15 +1,51 @@
 [
     {
         "id": 1,
+        "image": "/Feature.png",
+        "Title": "CabzTrack",
+        "description": "CabzTrack is an android app built for cab drivers to help them track their revenue and provides detailed reports. This an ongoing project currently at the google play console closed testing stage",
+        "skill": ["React Native", "Javascript", "Supabase"],
+        "live": "",
+        "github":""
+    },
+    {
+        "id": 2,
+        "image": "/Ameri.png",
+        "Title": "AmeriPro",
+        "description": "AmeriPro sought to revolutionize their sales workflow by introducing advanced automation technology. As part of the development team, we brought forth a paperless system, crafting a visionary mobile app that not only streamlined the previously manual sales procedures but also significantly enhanced the efficiency of their sales representatives in data recording.",
+        "skill": ["React Native", "Javascript", "MongoDb", "RESTAPIs"],
+        "live": "",
+        "github":""
+    },
+    {
+        "id": 3,
+        "image": "/Whizz.png",
+        "Title": "AmeriPro",
+        "description": "Whizcribs had a fundamental need to revolutionize the gifting experience through an innovative mobile application. With a focus on gifting, Whizcribs required a mobile app to let the users re-imagine how a gift card should be delivered. An app that would enable users to send personalized gift cards in a secure environment.",
+        "skill": ["React Native", "Javascript", "SqlLite"],
+        "live": "",
+        "github":""
+    },
+    {
+        "id": 4,
         "image": "/kenyanAuto.png",
         "Title": "KenyanAuto",
         "description": "This is a fullstack website. It is a vehicle web app that allows users to search for vehicles in Kenya. It allows users to search and discover different vehicle makes and models before purchase. It is also mobile responsive.",
-        "skill": ["React", "Javascript", "Strapi", "Postgres", "Render"],
+        "skill": ["React", "Javascript", "Docker", "Strapi", "Postgres", "Render"],
         "live": "https://www.kenyanauto.com/",
         "github": "https://github.com/Victor-Mutwiri/KenyanAuto"
     },
     {
-        "id": 2,
+        "id": 4,
+        "image": "/kenyanAuto.png",
+        "Title": "SanValencia Garndens",
+        "description": "Sanvalencia Gardens is an esteemed restaurant located along Riara Road, and wanted a website for their restaurant. Working as part of a team I delivered a website that has since served them and their clients for 4+ years, and actively work with the company to maintain it",
+        "skill": ["Wordpress", "Strapi", "Render"],
+        "live": "https://www.sanvalencia.com/",
+        "github": ""
+    },
+    {
+        "id": 3,
         "image": "/MatchFit.png",
         "Title": "MatchFit",
         "description": "This is a fullstack website. It is a job-board web app that allows users to search for jobs by title and location. It also has a feature that allows users to apply for jobs. It also has a login and signup feature that allows Employers to login and sign up repsectively. It is also mobile responsive.",
