--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "react-image-gallery": "^1.3.0",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.4",
     "@types/react-slick": "^0.23.13"
   }
 }
